[package]
name = "dash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
eframe = { version = "0.22.0", default-features = false, features = [ "glow" ] }
egui = "0.22.0"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"